# advanced-rag-system

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  env.template  pyproject.toml  test_vector.py
.cursor/rules/isolation_rules/: main.mdc
.cursor/rules/isolation_rules/Core/: context-management.mdc
.cursor/rules/isolation_rules/visual-maps/: archive-mode-map.mdc  creative-mode-map.mdc  implement-mode-map.mdc  plan-mode-map.mdc  van-mode-map.mdc
advanced_rag_system/: __init__.py  cli.py
backend/: Dockerfile.base  Dockerfile.service-template
backend/api_gateway_config/: Dockerfile  nginx.conf
backend/auth_service/: Dockerfile  __init__.py
backend/auth_service/app/: __init__.py  main.py
backend/auth_service/app/api/: auth.py  health.py
backend/auth_service/app/core/: config.py
backend/auth_service/app/crud/: user.py
backend/auth_service/app/models/: user.py
backend/chat_service/: Dockerfile  __init__.py
backend/chat_service/app/: main.py
backend/chat_service/app/api/: chat.py  health.py  sessions.py
backend/chat_service/app/core/: config.py
backend/chat_service/app/crud/: __init__.py  chat.py  rag.py
backend/chat_service/app/models/: __init__.py  chat.py  rag.py
backend/collection_service/: Dockerfile  __init__.py
backend/collection_service/app/: main.py
backend/collection_service/app/api/: collections.py  health.py  versions.py
backend/collection_service/app/core/: config.py  database.py
backend/collection_service/app/crud/: __init__.py  collection.py
backend/collection_service/app/models/: __init__.py  collection.py  schemas.py
backend/common/: __init__.py  api.py  auth.py  config.py  database.py  exceptions.py  health_checks.py  logging.py  main_base.py  models.py  schemas.py  service_factory.py  utils.py
backend/common/database/: __init__.py  base.py  models.py  redis.py  vector.py
backend/file_service/: Dockerfile  __init__.py
backend/file_service/app/: main.py
backend/file_service/app/api/: files.py
backend/file_service/app/chunking/: chunker.py
backend/file_service/app/core/: config.py  vector_integration.py
backend/file_service/app/crud/: file.py
backend/file_service/app/embedding/: embedder.py
backend/file_service/app/models/: file.py
backend/file_service/app/processing/: text_extractor.py
backend/mcp_orchestrator/: Dockerfile  __init__.py
backend/mcp_orchestrator/app/: main.py
backend/mcp_orchestrator/app/api/: __init__.py  access.py  executions.py  health.py  tools.py
backend/mcp_orchestrator/app/core/: config.py
backend/mcp_orchestrator/app/crud/: __init__.py  tool.py
backend/mcp_orchestrator/app/models/: __init__.py  schemas.py  tool.py
config/: README.md  default.yaml
config/environments/: development.yaml  production.yaml  staging.yaml  testing.yaml
database/init/: 01_init_database.sql
database/migrations/: env.py
database/migrations/versions/: 0baf82d82b5d_add_user_table_with_authentication.py  2aec80ba72dc_update_chat_sessions_schema.py  58ef11e2b7a6_initial_database_schema.py  863e2a535b20_add_processing_jobs_table.py  956424a15243_add_file_service_tables.py  fix_chat_sessions_defaults.py  fix_chat_sessions_schema.py  fix_chat_sessions_simple.py  fix_chat_sessions_targeted.py  fix_message_role_enum.py
database/qdrant_init/: setup_collections.py
diagrams/: README.md  generate_all.py
diagrams/architecture/: infrastructure.py  system_overview.py
diagrams/components/: backend_components.py  frontend_components.py
diagrams/flows/: ai_processing_flow.py
docs/: cursor-setup-guide.md
docs/api/: README.md
memory-bank/: activeContext.md  architecture-diagrams.md  best_practices.md  implementation-flow-strategy.md  productContext.md  progress.md  project_structure.md  projectbrief.md  style-guide.md  systemPatterns.md  tasks.md  techContext.md
memory-bank/archive/: archive-dry-refactoring-infrastructure-20250102.md
memory-bank/creative/: creative-chat-interface-ux.md  creative-context-merging-strategy.md  creative-system-architecture.md  creative-vector-database-schema.md
memory-bank/new-window-promps/: prompt-contine-work.md
memory-bank/reflection/: reflection-dry-refactoring-build.md
tests/integration/: test_services_integration.py
tests/integration/tests/integration/: results.json
